--- a/index.css
+++ b/index.css
@@ -6,12 +6,30 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
+      background-color: #000000;
+      background-image: linear-gradient(315deg, #000000 0%, #ffffff 74%);
   }
-  
-  .container {
+  #options{
     max-width: 750px;
+    margin: 3em auto;
+    display: flex;
+    justify-content: space-around ;
+  }
+  #options button{
+    padding: 1em;
+    border: 1px solid #555;
+    border-radius: 5%;
+    text-transform: uppercase;
+    background: black;
+    color: white;
+    font-weight: 700;
+    cursor: pointer;
+  }
+  .container {
+    background-color: white;
+    max-width: 960px;
     height: 750px;
-    margin: 5em auto;
+    margin: 1em auto;
     display: grid;
     grid-template-rows: repeat(var(--grid-rows), 1fr);
     grid-template-columns: repeat(var(--grid-cols), 1fr);
